<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Glowdeck</string>
    <string name="drawer_name">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="ic_stream_settings">Glowdeck Settings</string>
    <string name="individual_stream_settings">Individual Glowdeck Settings</string>
    <string name="user_name">Username:</string>
    <string name="email_name">Email:</string>
    <string name="user_password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="streams_logo">Streams Logo, Currently Beta</string>
    <string name="remember_me">Remember Me</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="create_account">Create Account</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="build_version">V2.0</string>
    <string name="google_version_code">12</string>
    <string name="streams_user_version">2.0</string>
    <string name="streams_db_version">23</string>
    <string name="create_streams_account">Create a Glowdeck Account</string>
    <string name="about_check_update">Check Google Play for Updates</string>
    <string name="about_upload_firmware">Update Glowdeck Firmware</string>
    <string name="select_country">Select a Country</string>
    <string name="select_state">Select a State</string>
    <string name="expand_arrow_up">Expand Arrow Up</string>
	<string name="settings_icon">Settings Stream Icon</string>
	<string name="personal_stream">Personal</string>
	<string name="social_stream">Social</string>
	<string name="public_stream">Public</string>
	<string name="device_WiFi_tab">WiFi</string>
	<string name="device_Lights_tab">Lights</string>
	<!-- Melody Items -->
	<!--  DeviceListActivity -->
    <string name="scanning">Scanning for Glowdeck...</string>
    <string name="select_device">Select a Glowdeck to Connect</string>
    <string name="none_paired">No Glowdecks Have Been Paired</string>
    <string name="none_found">No Glowdecks Found</string>
    <string name="title_paired_devices">Paired Glowdecks</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for Glowdeck</string>
    <string name="not_connected">Not Connected, Click to Connect</string>
    <string name="glowdeck_disconnected">Glowdeck Disconnected, Reconnect from Menu</string>
    <string name="customize_sound">Customize sound</string>
    <string name="bt_not_enabled">BT Not Enabled</string>
    <string name="Privacy">Privacy</string>


    <!-- Streams Drawer Menu Items -->
    <string-array name="streams_drawer_items">
        <item>Glowdeck</item>
        <item>Devices</item>
        <item>Scanning...</item>
        <item>Get More Devices</item>
        <item>Profile</item>
        <item>About</item>
        <item>Sign Out</item>
    </string-array>


    <!-- Streams Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="streams_drawer_icons">
        <item>@drawable/streams_icon</item>
        <item>@drawable/devices_icon</item>
        <item>@drawable/get_more_devices_icon</item>
        <item>@drawable/get_more_devices_icon</item>
        <item>@drawable/profile_icon</item>
        <item>@drawable/about_icon</item>
        <item>@drawable/signout_icon</item>
    </array>
    
    
    <!-- Images of the ordered items -->
    <!-- Display in Profile/Orders -->
    <array name="streams_orders_icons">
        <item>@drawable/photo_unavail</item>
        <item>@drawable/glowdeck_walnut</item>
        <item>@drawable/iqi_apple</item>
        
    </array>
    
    <!-- KEYWORDS for above Images of the ordered items -->
    <!-- Display in Profile/Orders -->
    <array name="streams_orders_icons_keywords">
        <item>N/A</item>
        <item>Glowdeck</item>
        <item>Qi</item>  
    </array>
    
    
    
    
    
    
    <!-- Streams Setting Permanent Menu Items -->
    <string-array name="streams_settings_items">
        <item>Calls</item>
        <item>Messages</item>
        <item>Email</item>
        <item>Weather</item>
        <item>News</item>
        <item>Twitter</item>
        <item>Facebook</item>
        <item>Instagram</item>
        <item>Add New Stream</item>
    </string-array>

    <!-- Streams Setting On Icon Items -->
    <!-- Keep them in order as the titles are in -->
    <array name="streams_settings_icons_on">
        <item>@drawable/call_on</item>
        <item>@drawable/message_on</item>
        <item>@drawable/email_on</item>
        <item>@drawable/weather_on</item>
        <item>@drawable/news_on</item>
        <item>@drawable/twitter_on</item>
        <item>@drawable/fb_on</item>
        <item>@drawable/instagram_on</item>
        <item>@drawable/plus_icon</item>
    </array>
    
    <!-- Streams Setting Off Icon Items -->
    <!-- Keep them in order as the titles are in  -->
    <array name="streams_settings_icons_off">
        <item>@drawable/call_off</item>
        <item>@drawable/message_off</item>
        <item>@drawable/email_off</item>
        <item>@drawable/weather_off</item>
        <item>@drawable/news_off</item>
        <item>@drawable/twitter_off</item>
        <item>@drawable/fb_off</item>
        <item>@drawable/instagram_off</item>
        <item>@drawable/plus_icon</item>
    </array>
    
   
    

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_stream_settings">Settings</string>



    <!--  depricated
    <string-array name="us_states_array">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
		<item>Wisconsin</item>
		<item>Wyoming</item> 
    </string-array>
    -->
    
    
     <string name="Charging">Charging</string>
     <string name="WirelessCharger">WirelessCharger</string>
     <string name="WirelessChargerFeature">Wireless Charger</string>
     <string name="SmartCharging">SmartCharging</string>
     <string name="SmartChargingFeature">Smart Charging</string>
     <string name="Lights">Lights</string>
     <string name="LightSystem">LightSystem</string>
     <string name="LightSystemFeature">Light System</string>
     
     <string name="Display">Display</string>
     <string name="AutoBrightness">AutoBrightness</string>
     <string name="AutoBrightnessFeature">Auto Brightness</string>
     <string name="no_glowdeck_response">Glowdeck is still scanning\n Please cancel and try again...</string>
     <string name="glowdecks_wifi_network">Select Your Network</string>
     <string name="network_summary">Network</string>
     <string name="wifi_settings_unprovisioned">Wifi [Not Connected]</string>
     <string name="wifi_settings_provisioned">Wifi [Connected]</string>
     <string name="WifiPassword">WifiPassword</string>
     <string name="wifiPasswordFeature">Password</string>
     <string name="SSID">SSID</string>
      <string name="SSID_Category">SSID_Category</string>
     <string name="ssidFeature_not_connected">Network --- [Not Connected]</string>
     <string name="ssidFeature_connected">Network --- [Connected]</string>
     <string name="ssidFeature_undetermined">Network</string>
     <string name="opt_net_password">Enter network password</string>
       <string name="press_actions">Press Actions</string>
       <string name="streams_disp_policy">Streams display policy\n</string>
       <string name="streams">Streams</string>
        <string name="streams_settings">Streams</string>
        <string name="streamsFeature">Streams</string>
        
        <string name="Sound">Sound</string>
        <string name="MusicSync">MusicSync</string>
        <string name="MusicSyncFeature">Music Sync</string>
        <string name="ShowMusicInfo">ShowMusicInfo</string>
        <string name="ShowMusicInfoFeature">Show Music Info</string>
        <string name="Equalizer">Equalizer</string>
        <string name="streams_privacy">Streams privacy</string>
        <string name="my_router">MyRouter</string>
          <string name="sound">Sound</string>
     
     
  	<string name="listfont_preference">listfont_preference</string>
  	<string name="listicon_preference">listicon_preference</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">Change the font size in list</string>
    <string name="title_icon_size">Icon size</string>
    <string name="summary_icon_size">Change the icon size in list</string>
    <string name="dialog_title_font_size">Select font size</string>
     <string name="dialog_title_icon_size">Select icon size</string>
    <string name="title_my_preference">My preference</string>
    <string name="summary_my_preference">This is a custom counter preference</string>
</resources>
