<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory 
        android:title="@string/wifi_settings_unprovisioned" 
        android:key="@string/SSID_Category" >
        <ListPreference
            android:defaultValue="@string/no_glowdeck_response"
            android:dialogTitle="@string/glowdecks_wifi_network"
            android:enabled="false"
            android:entries="@array/SSIDOptions"
            android:entryValues="@array/SSIDOptionsValues"
            android:key="@string/SSID"
            android:selectable="true"
            android:summary="@string/network_summary"
            android:title="@string/ssidFeature_not_connected" />
        <EditTextPreference
            android:defaultValue=""
            android:dialogTitle="Enter Password"
            android:inputType="textPassword"
            android:key="@string/WifiPassword"
            android:summary="@string/opt_net_password"
            android:enabled="false"
            android:title="@string/wifiPasswordFeature" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Charging" >
        <SwitchPreference
            android:key="@string/WirelessCharger"
            android:summary="Enable Wireless Charger"
            android:title="@string/WirelessChargerFeature" />
        <SwitchPreference
            android:key="@string/SmartCharging"
            android:summary="Auto-Disable Wireless Charger"
            android:title="@string/SmartChargingFeature" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Display" >
        <SwitchPreference
            android:key="@string/AutoBrightness"
            android:summary="Auto-Dim Display"
            android:title="@string/AutoBrightnessFeature" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Lights" >
        <SwitchPreference
            android:key="@string/LightSystem"
             android:summary="Lights On/Off"
            android:title="@string/LightSystemFeature" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Sound" >
        <SwitchPreference
            android:key="@string/MusicSync"
            android:summary="Enable LED Show"
            android:title="@string/MusicSyncFeature" />
        <SwitchPreference
            android:key="@string/ShowMusicInfo"
            android:summary="Artist and Title"
            android:title="@string/ShowMusicInfoFeature" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/Equalizer"
            android:enabled="true"
            android:entries="@array/equalizerOptions"
            android:entryValues="@array/equalizerOptionsValues"
            android:key="@string/Equalizer"
            android:selectable="true"
            android:summary="@string/customize_sound"
            android:title="@string/Equalizer" >
        </ListPreference>
    </PreferenceCategory>
    
     <PreferenceCategory android:title="@string/Privacy" >
         <ListPreference
             android:defaultValue="0"
             android:dialogTitle="@string/streams_privacy"
             android:enabled="false"
             android:entries="@array/privacyOptions"
             android:entryValues="@array/privacyOptionsValues"
             android:key="@string/Privacy"
             android:selectable="true"
             android:summary="@string/streams_disp_policy"
             android:title="@string/streams_privacy"></ListPreference>
        
    </PreferenceCategory>

    <!--
    <PreferenceCategory android:title="@string/streams_settings" >
        <SwitchPreference
            android:key="@string/streams"
            android:title="@string/streamsFeature" />
    </PreferenceCategory>
    -->


    <!--
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_preference"
            android:key="edittext_preference"
            android:summary="@string/summary_edittext_preference"
            android:title="@string/title_edittext_preference" />
        
        <ListPreference
            android:dialogTitle="@string/dialog_title_font_size"
            android:entries="@array/entries_listfont_preference"
            android:entryValues="@array/entryvalues_listfont_preference"
            android:key="@string/listfont_preference"
            android:summary="@string/summary_font_size"
            android:textColor="@color/color_white"
            android:title="@string/title_font_size" />
        
        <ListPreference
            android:dialogTitle="@string/dialog_title_icon_size"
            android:entries="@array/entries_listicon_preference"
            android:entryValues="@array/entryvalues_listicon_preference"
            android:key="@string/listicon_preference"
            android:summary="@string/summary_icon_size"
            android:textColor="@color/color_white"
            android:title="@string/title_icon_size" />
    -->


    <!--
             This PreferenceScreen tag serves as a screen break (similar to page break
            in word processing). Like for other preference types, we assign a key
            here so it is able to save and restore its instance state.
       
    <PreferenceCategory android:title="@string/launch_preferences" >

       
        <PreferenceScreen
            android:key="screen_preference"
            android:summary="@string/summary_screen_preference"
            android:title="@string/title_screen_preference" >
            <CheckBoxPreference
                android:key="next_screen_checkbox_preference"
                android:summary="@string/summary_next_screen_toggle_preference"
                android:title="@string/title_next_screen_toggle_preference" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/summary_intent_preference"
            android:title="@string/title_intent_preference" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />
        </PreferenceScreen>
    </PreferenceCategory>
    -->
    <!--
    <PreferenceCategory android:title="@string/preference_attributes" >
        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:summary="@string/summary_parent_preference"
            android:title="@string/title_parent_preference" />

       /* The visual style of a child is defined by this styled theme attribute. */
        <CheckBoxPreference
            android:dependency="parent_checkbox_preference"
            android:key="child_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/summary_child_preference"
            android:title="@string/title_child_preference" />
    </PreferenceCategory>
    -->

</PreferenceScreen>